[gd_scene load_steps=4 format=3 uid="uid://cdrmqgiuv6wf3"]

[ext_resource type="Script" path="res://src/ui-components/team-profile/team_profile.gd" id="1_2kt4b"]
[ext_resource type="PackedScene" uid="uid://dq4dr3oe20mb8" path="res://src/ui-components/player-list/player_list.tscn" id="2_4288b"]
[ext_resource type="LabelSettings" uid="uid://cc2vi4onhgmnw" path="res://theme/bold_label_settings.tres" id="2_e0wm0"]

[node name="TeamProfile" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_2kt4b")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TeamInfo" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/HBoxContainer/TeamInfo"]
layout_mode = 2
label_settings = ExtResource("2_e0wm0")

[node name="PresitgeStars" type="Label" parent="VBoxContainer/HBoxContainer/TeamInfo"]
layout_mode = 2

[node name="Presitge" type="Label" parent="VBoxContainer/HBoxContainer/TeamInfo"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HBoxContainer/TeamInfo"]
layout_mode = 2

[node name="BudgetTitle" type="Label" parent="VBoxContainer/HBoxContainer/TeamInfo"]
layout_mode = 2
text = "BUDGET"
label_settings = ExtResource("2_e0wm0")

[node name="Budget" type="Label" parent="VBoxContainer/HBoxContainer/TeamInfo"]
layout_mode = 2

[node name="SalaryBudget" type="Label" parent="VBoxContainer/HBoxContainer/TeamInfo"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/HBoxContainer/TeamInfo"]
layout_mode = 2

[node name="StadiumTitle" type="Label" parent="VBoxContainer/HBoxContainer/TeamInfo"]
layout_mode = 2
text = "STADIUM"
label_settings = ExtResource("2_e0wm0")

[node name="StadiumName" type="Label" parent="VBoxContainer/HBoxContainer/TeamInfo"]
layout_mode = 2

[node name="StadiumCapacity" type="Label" parent="VBoxContainer/HBoxContainer/TeamInfo"]
layout_mode = 2

[node name="StadiumYearBuilt" type="Label" parent="VBoxContainer/HBoxContainer/TeamInfo"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="PlayerList" parent="VBoxContainer/HBoxContainer" instance=ExtResource("2_4288b")]
layout_mode = 2
